--- a/aws-mock/compose.yaml
+++ b/aws-mock/compose.yaml
@@ -5,11 +5,11 @@ services:
       - "5000:5000"
     environment:
       - MOTO_PORT=5000
-      - MOTO_HOST=0.0.0.0
+      - MOTO_HOST=moto
       - MOTO_HTTP_ENDPOINT=http://moto:5000
-      - MOTO_DOCKER_NETWORK_NAME=moto-network
+      - MOTO_DOCKER_NETWORK_NAME=aws-mock-network
       - MOTO_DOCKER_LAMBDA_IMAGE=mlupin/docker-lambda
-      - MOTO_LAMBDA_DATA_DIR=/tmp/data
+      - MOTO_LOG_LEVEL=debug
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     healthcheck:
@@ -18,7 +18,27 @@ services:
       timeout: 5s
       retries: 3
     networks:
-      - moto-network
+      - aws-mock-network
+
+  localstack:
+    image: localstack/localstack:latest
+    ports:
+      - "4566:4566"
+    environment:
+      - SERVICES=iam,s3,lambda,dynamodb,sqs,cloudwatch,logs
+      - DEBUG=1
+      - DOCKER_HOST=unix:///var/run/docker.sock
+      - AWS_DEFAULT_REGION=us-east-1
+      - LOCALSTACK_HOST=localstack
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4566/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    networks:
+      - aws-mock-network
 
   awscli:
     image: amazon/aws-cli:latest
@@ -26,11 +46,8 @@ services:
       - AWS_ACCESS_KEY_ID=dummy
       - AWS_SECRET_ACCESS_KEY=dummy
       - AWS_DEFAULT_REGION=us-east-1
-      - AWS_ENDPOINT_URL=http://moto:5000
-    depends_on:
-      - moto
     networks:
-      - moto-network
+      - aws-mock-network
 
   terraform:
     image: hashicorp/terraform:latest
@@ -38,11 +55,9 @@ services:
       - AWS_ACCESS_KEY_ID=dummy
       - AWS_SECRET_ACCESS_KEY=dummy
       - AWS_DEFAULT_REGION=us-east-1
-    depends_on:
-      - moto
     networks:
-      - moto-network
+      - aws-mock-network
 
 networks:
-  moto-network:
+  aws-mock-network:
     driver: bridge
