--- a/mcp-client-server/pyproject.toml
+++ b/mcp-client-server/pyproject.toml
@@ -5,9 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.115.12",
+    "langchain>=0.3.25",
     "langchain-google-genai>=2.1.4",
     "langchain-mcp-adapters>=0.0.10",
     "langgraph>=0.4.2",
+    "langserve[all]>=0.3.1",
     "loguru>=0.7.3",
     "python-dotenv>=1.1.0",
+    "uvicorn>=0.34.2",
+]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "flake8>=7.2.0",
+    "isort>=6.0.1",
 ]
