--- a/mcp-client-server/backend/pyproject.toml
+++ b/mcp-client-server/backend/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "langserve[all]>=0.3.1",
     "loguru>=0.7.3",
     "python-dotenv>=1.1.0",
+    "tiktoken>=0.9.0",
     "uvicorn>=0.34.2",
+    "websockets>=15.0.1",
 ]
 
 [dependency-groups]
