--- a/mcp-client-server/backend/pyproject.toml
+++ b/mcp-client-server/backend/pyproject.toml
@@ -5,11 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "fastapi>=0.115.12",
     "langchain>=0.3.25",
     "langchain-google-genai>=2.1.4",
     "langchain-mcp-adapters>=0.0.10",
     "langgraph>=0.4.2",
+    "langgraph-checkpoint-sqlite>=2.0.7",
     "langserve[all]>=0.3.1",
     "loguru>=0.7.3",
     "python-dotenv>=1.1.0",
