--- a/swc-wasm-sdx/package.json
+++ b/swc-wasm-sdx/package.json
@@ -17,7 +17,11 @@
     "npm": "11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "uuid": "11.1.0"
+    "remark-parse": "11.0.0",
+    "remark-stringify": "11.0.0",
+    "unified": "11.0.5",
+    "uuid": "11.1.0",
+    "yaml": "2.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
