--- a/swc-wasm-sdx/package.json
+++ b/swc-wasm-sdx/package.json
@@ -23,21 +23,25 @@
     "npm": "11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "remark": "15.0.1",
+    "remark-html": "16.0.1",
     "remark-parse": "11.0.0",
     "remark-stringify": "11.0.0",
     "unified": "11.0.5",
     "uuid": "11.1.0",
+    "vfile": "6.0.3",
     "yaml": "2.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "stylelint": "16.19.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
