feat: update markdown to json parser

--- a/swc-wasm-sdx/package.json
+++ b/swc-wasm-sdx/package.json
@@ -16,11 +16,14 @@
     "@codemirror/theme-one-dark": "6.1.2",
     "@codemirror/view": "6.36.8",
     "@swc/wasm-web": "1.11.16",
+    "@types/mdast": "4.0.4",
     "acorn": "8.14.1",
     "clsx": "2.1.1",
     "codemirror": "6.0.1",
     "immer": "10.1.1",
     "install": "0.13.0",
+    "mdast": "3.0.0",
+    "mdast-util-from-markdown": "2.0.2",
     "npm": "11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
