--- a/storybook-task-app/package.json
+++ b/storybook-task-app/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
     "@eslint/js": "^9.25.0",
+    "@storybook/addon-a11y": "8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/addon-links": "8.6.14",
