--- a/mcp-client-server/backend/pyproject.toml
+++ b/mcp-client-server/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "arize-phoenix>=10.0.4",
     "fastapi>=0.115.12",
     "langchain>=0.3.25",
     "langchain-google-genai>=2.1.4",
@@ -14,6 +15,9 @@ dependencies = [
     "langgraph-checkpoint-sqlite>=2.0.7",
     "langserve[all]>=0.3.1",
     "loguru>=0.7.3",
+    "openinference-instrumentation-langchain>=0.1.43",
+    "opentelemetry-exporter-otlp>=1.33.1",
+    "opentelemetry-sdk>=1.33.1",
     "python-dotenv>=1.1.0",
     "tiktoken>=0.9.0",
     "uvicorn>=0.34.2",
