--- a/mcp-client-server/frontend/package.json
+++ b/mcp-client-server/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "2.1.1",
+    "immer": "10.1.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
