--- a/mcp-client-server/backend/pyproject.toml
+++ b/mcp-client-server/backend/pyproject.toml
@@ -29,4 +29,6 @@ dev = [
     "black>=25.1.0",
     "flake8>=7.2.0",
     "isort>=6.0.1",
+    "langgraph-cli[inmem]>=0.1.54",
+    "pytest>=8.3.5",
 ]
