--- a/mcp-client-server/backend/pyproject.toml
+++ b/mcp-client-server/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
     "arize-phoenix>=10.0.4",
+    "copilotkit>=0.1.46",
     "fastapi>=0.115.12",
     "langchain>=0.3.25",
     "langchain-google-genai>=2.1.4",
