--- a/mcp-client-server/frontend/package.json
+++ b/mcp-client-server/frontend/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@copilotkit/react-core": "1.8.13",
+    "@copilotkit/react-ui": "1.8.13",
+    "@copilotkit/runtime": "1.8.13",
     "clsx": "2.1.1",
     "immer": "10.1.1",
     "next": "15.3.2",
+    "openai": "5.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
