--- a/storybook-task-app/package.json
+++ b/storybook-task-app/package.json
@@ -13,8 +13,10 @@
     "init-msw": "msw init public/"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.8.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-redux": "9.2.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
