--- a/mcp-client-server/frontend/package.json
+++ b/mcp-client-server/frontend/package.json
@@ -12,6 +12,7 @@
     "@copilotkit/react-core": "1.8.13",
     "@copilotkit/react-ui": "1.8.13",
     "@copilotkit/runtime": "1.8.13",
+    "@next/bundle-analyzer": "15.3.3",
     "@radix-ui/react-checkbox": "1.3.2",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-label": "2.1.7",
@@ -36,6 +37,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "eslint-plugin-simple-import-sort": "12.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
