--- a/storybook-task-app/package.json
+++ b/storybook-task-app/package.json
@@ -11,7 +11,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook",
-    "init-msw": "msw init public/"
+    "init-msw": "msw init public/",
+    "test": "vitest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "2.8.2",
@@ -33,8 +34,12 @@
     "@storybook/react-vite": "^8.6.14",
     "@storybook/test": "^8.6.14",
     "@storybook/test-runner": "0.22.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/browser": "3.1.4",
     "@vitest/coverage-v8": "3.1.4",
@@ -43,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "0.12.0",
     "globals": "^16.0.0",
+    "jsdom": "26.1.0",
     "msw": "2.8.4",
     "msw-storybook-addon": "2.0.4",
     "playwright": "1.52.0",
@@ -50,7 +56,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vitest": "3.1.4"
+    "vitest": "3.1.4",
+    "vitest-axe": "0.1.0"
   },
   "eslintConfig": {
     "extends": [
