--- a/ai-crawling/pyproject.toml
+++ b/ai-crawling/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "crawl4ai>=0.6.3",
+    "litellm>=1.72.7",
     "rich>=14.0.0",
 ]
