--- a/mdx-sql/package.json
+++ b/mdx-sql/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "3.1.0",
     "codemirror": "^6.0.2",
+    "handlebars": "4.7.8",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
