--- a/angular-md/package.json
+++ b/angular-md/package.json
@@ -19,14 +19,15 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
-    "@codemirror/basic-setup": "0.20.0",
     "@codemirror/lang-markdown": "6.4.0",
     "@codemirror/lang-sql": "6.10.0",
     "@codemirror/language": "6.11.3",
     "@codemirror/state": "6.5.2",
     "@codemirror/theme-one-dark": "6.1.3",
     "@codemirror/view": "6.38.5",
+    "@duckdb/duckdb-wasm": "1.30.0",
     "codemirror": "6.0.2",
+    "echarts": "6.0.0",
     "lit": "3.3.1",
     "marked": "16.4.0",
     "rxjs": "~7.8.0",
