--- a/bi-as-code/package.json
+++ b/bi-as-code/package.json
@@ -15,7 +15,15 @@
     "vite": "7.1.10"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "6.4.0",
+    "@codemirror/lang-sql": "6.10.0",
+    "@codemirror/language": "6.11.3",
+    "@codemirror/state": "6.5.2",
+    "@codemirror/theme-one-dark": "6.1.3",
+    "@codemirror/view": "6.38.6",
     "@duckdb/duckdb-wasm": "1.30.0",
+    "codemirror": "6.0.2",
+    "lit": "3.3.1",
     "marked": "16.4.1",
     "vega": "6.2.0",
     "vega-embed": "7.1.0",
