--- a/bi-as-code/package.json
+++ b/bi-as-code/package.json
@@ -24,6 +24,7 @@
     "@codemirror/view": "6.38.6",
     "@duckdb/duckdb-wasm": "1.30.0",
     "codemirror": "6.0.2",
+    "handlebars": "4.7.8",
     "lit": "3.3.1",
     "marked": "16.4.1",
     "vega": "6.2.0",
